<resources>
    <string name="auth">authentication</string>
    <string name="userid">UserId</string>
    <string name="verified">Verified</string>
    <string name="join">Join</string>
    <string name="studyId">studyId</string>
    <string name="app_name">MyStudies</string>
    <string name="ok">OK</string>
    <string name="app_stage">development</string>
    <string name="signup">SIGN UP</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="account_deletion">Account has been deleted.</string>
    <string name="signOut">Signed Out Successfully.</string>
    <string name="enter_first_name">enter first name</string>
    <string name="enter_last_name">enter last name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email">enter email</string>
    <string name="enter_new_password">enter new password</string>
    <string name="enter_old_password">enter current password</string>
    <string name="password">Password</string>
    <string name="passcode">Passcode</string>
    <string name="enter_password">enter password</string>
    <string name="add_password">add password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">enter subject</string>
    <string name="message">Message</string>
    <string name="enter_feedback">Enter your feedback here</string>
    <string name="contact_us">CONTACT US</string>
    <string name="feedback">LEAVE US YOUR FEEDBACK</string>
    <string name="feedback_text">We\'d love to hear from you! Please share your thoughts on how we can improve your experience of participating in health studies and contributing to a healthier world! Your feedback will be anonymous.</string>
    <string name="enter_confirm_password">confirm password</string>
    <string name="enter_contact_us">Please let us know what you need help with. We will get back to you at the earliest.</string>
    <string name="agree">I Agree to the Terms and Privacy Policy</string>
    <string name="submit">Submit</string>
    <string name="verification_step">Verification Step</string>
    <string name="tap_below_txt">Once done, tap on the \n button below.</string>
    <string name="continue_txt">Continue</string>
    <string name="verification_code">Enter verification code</string>
    <string name="verification_email">Enter email address</string>
    <string name="resend">Resend Verification Code</string>
    <string name="congrats_txt">Congrats!</string>
    <string name="survey_completed">Activity Completed</string>
    <string name="signup_process_complete">Your Sign Up process is\n now complete</string>
    <string name="next">Next</string>
    <string name="setup_passcode">Create Passcode</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="usr_pwd">with username and\n password</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="old_pasword">Current Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_usr_signup">New User? Sign Up</string>
    <string name="use_touch_id">Use Touch ID</string>
    <string name="or">OR</string>
    <string name="passcode_to_access_app">Enter Passcode to\n access app</string>
    <string name="fda_listens">FDA MyStudies</string>
    <string name="notifictions">NOTIFICATIONS</string>
    <string name="resources">RESOURCES</string>
    <string name="reachout">REACH OUT</string>
    <string name="profile">MY ACCOUNT</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="change_passcode">Change passcode</string>
    <string name="use_passcode_txt">Use Passcode to access app</string>
    <string name="touch_txt">Use Touch ID to access or sign in to app</string>
    <string name="receive_push_notifctn">Receive Push Notifications?</string>
    <string name="recv_stdy_actrem">Receive Study Activity Reminders?</string>
    <string name="reminder">Set up lead time for study activity reminders</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="update">Update</string>
    <string name="get_started">Get Started</string>
    <string name="website">https://www.fda.gov/</string>
    <string name="websitetxt">www.fda.gov</string>
    <string name="gateway_welcome">Welcome!</string>
    <string name="gateway_welcome1">Leveraging the Power of Mobility for Research</string>
    <string name="gateway_welcome2">Improving Health Outcomes</string>
    <string name="gateway_welcome3">Protecting Your Privacy</string>
    <string name="gateway_des">The FDA is pleased to offer the FDA MyStudies app as a tool to gather real time, contextual data about medication use and other health issues facing the people we serve.</string>
    <string name="gateway_des1">Available for iOS and Android devices, this app will house studies conducted by FDA and other institutions, enabling researchers to engage more directly with people to gather data via questionnaires.</string>
    <string name="gateway_des2">Explore and participate in studies for which you are eligible and help generate more data, better insights and improved outcomes.</string>
    <string name="gateway_des3">All studies in this app have been approved by an Institutional Review Board, follow strict federal research guidelines, and securely store your responses to ensure your privacy is always protected.</string>
    <string name="new_user">New User?</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="activities_label">Activities</string>
    <string name="resources_label">Resources</string>
    <string name="study_activities">STUDY ACTIVITIES</string>
    <string name="forgot_password_heading">PASSWORD HELP</string>
    <string name="forgot_password_text">Please enter your registered email to receive password help.</string>
    <string name="change_password_heading">CHANGE PASSWORD</string>
    <string name="change_password_heading1">CREATE PASSWORD</string>
    <string name="watch_video">Watch Video</string>
    <string name="learn_more">Learn More</string>
    <string name="profile_small">My Account</string>
    <string name="terms">TERMS OF USE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="privacy_policy_content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. \n\nThe point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. \n \nThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isnt anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</string>
    <string name="delete_account_content">You have chosen to delete your FDA MyStudies Account. This will result in automatic withdrawal from all studies.\n\nBelow is a list of studies that you are a part of and information on how your response data will be handled with each after you withdraw. Please review and confirm.</string>
    <string name="medication_survey">Medication survey</string>
    <string name="response_retained">Response data will be retained</string>
    <string name="study_pregnant_women">A Study for pregnant women</string>
    <string name="response_deleted">Response data will be deleted</string>
    <string name="mental_health_survey">Mental health survey</string>
    <string name="delete_my_data">Delete My Data</string>
    <string name="retain_my_data">Retain My Data</string>
    <string name="health_survey">Health survey</string>
    <string name="agree_deleting_my_account">I agree, proceed to deleting my account</string>
    <string name="do_not_wish_to_delete_my_account">I do not wish to delete my account</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="side_menu_home">Home</string>
    <string name="side_menu_resources">Resources</string>
    <string name="side_menu_reach_out">Reach Out</string>
    <string name="side_menu_sign_in">Sign In</string>
    <string name="side_menu_new_user">New User?</string>
    <string name="side_menu_sign_up">Sign up</string>
    <string name="side_menu_sign_out">Sign Out</string>
    <string name="side_menu_version">v</string>
    <string name="poweredby">Powered by FDA MyStudies</string>
    <string name="survey">Survey</string>
    <string name="no_study">Sorry, no studies available right now. Please remain signed in to get notified when there are new studies available. </string>
    <string name="surveyjsonname">survey.json</string>
    <string name="enter_enrollmentid">Enter enrollment ID</string>
    <string name="enrollmentdesc">This study allows only pre-screened participants to join the study. If you are one, please enter the enrollment ID provided to you for this study.</string>
    <string name="reviewconformmsg">By Agreeing you confirm that you read the consent and that you wish to take part in this research study.</string>
    <string name="reviewmsg">Review the form below, and tap Agree if you\'re ready to continue</string>
    <string name="review">Review</string>
    <string name="verification_email_content1">An email has been sent to</string>
    <string name="verification_email_content2">. Please type in the Verification Code received in the email to complete the verification step.</string>
    <string name="verification_email_signin">Your registered email is pending verification. Please type in the Verification Code received in the email to complete this step and proceed to using the app.</string>
    <string name="verification_email_forgotpassword">Your registered email</string>
    <string name="verification_email_forgotpassword1"> is pending verification. Enter the Verification Code received on this email to complete verification and try the Forgot Password action again.</string>
    <string name="email_empty">Please enter your email address.</string>
    <string name="password_empty">Please enter your password.</string>
    <string name="password_new_empty">Please enter your new password.</string>
    <string name="password_old_empty">Please enter your current password.</string>
    <string name="consentthanksmsg">Thanks for providing consent for this Study</string>
    <string name="studystartmsg">You can now start using the app to participate in the study.</string>
    <string name="viewpdf">View/Email eConsent PDF</string>
    <string name="not_eligible">Not Eligible</string>
    <string name="done">Done</string>
    <string name="noteligibledesc">Sorry, you are not eligible for participation in this study. We thank you for your interest and time, and encourage you to explore other studies as they are available in the app. </string>
    <string name="you_are_eligible">You are Eligible!</string>
    <string name="eligibledesc">Based on the answers you provided, you are eligible to participate in this study. Please click Continue to proceed to the Consent section.</string>
    <string name="continuetxt">Continue</string>
</resources>