<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.harvard.EligibilityModule.NotEligibleActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/notEligible"
            style="@style/TextType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/not_eligible"
            android:textColor="@color/colorPrimaryBlack"/>

        <TextView
            android:id="@+id/notEligibleDesc"
            style="@style/TextType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notEligible"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/noteligibledesc"
            android:textColor="@color/colorPrimaryBlack"/>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notEligibleDesc"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/smile2"/>

        <TextView
            android:id="@+id/notEligibleOK"
            style="@style/TextType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle_black_white"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/colorPrimaryBlack"/>
    </RelativeLayout>

</RelativeLayout>
