<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2017-2019 Harvard Pilgrim Health Care Institute (HPHCI) and its Contributors.
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ Funding Source: Food and Drug Administration (“Funding Agency”) effective 18 September 2014 as Contract no. HHSF22320140030I/HHSF22301006T (the “Prime Contract”).
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:background="@color/white">


    <View
        android:id="@+id/mCenterView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/bullet_green_color"
        android:visibility="invisible"/>


    <TextView
        android:id="@+id/consentcomplete"
        style="@style/TextType1"
        android:layout_above="@id/mCenterView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/consentthanksmsg"
        android:textColor="@color/colorPrimaryBlack"/>


    <TextView
        android:id="@+id/mTextSecRow"
        style="@style/TextType2"
        android:layout_below="@+id/mCenterView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/studystartmsg"
        android:textColor="@color/colorPrimaryBlack"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/viewpdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/viewpdf"
            android:textColor="@color/colorPrimaryBlack"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/next"
            style="@style/TextType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewpdf"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle_black_white"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/colorPrimary"/>
    </RelativeLayout>
</RelativeLayout>
